# connectedhomeip

./: .gitmodules
.github/workflows/: build.yaml  darwin.yaml  examples-efr32.yaml  examples-esp32.yaml  examples-linux-standalone.yaml  examples-nrfconnect.yaml  unit_integration_test.yaml
config/nrfconnect/: .nrfconnect-recommended-revision
config/nrfconnect/app/: sample-defaults.conf
config/nrfconnect/chip-module/: CMakeLists.txt  Kconfig  Kconfig.defaults  Kconfig.features  generate_certs.cmake  generate_factory_data.cmake
docs/guides/: nrfconnect_android_commissioning.md  nrfconnect_factory_data_configuration.md
examples/all-clusters-app/nrfconnect/: CMakeLists.txt  README.md
examples/all-clusters-minimal-app/nrfconnect/: README.md
examples/light-switch-app/nrfconnect/: CMakeLists.txt  Kconfig  README.md  prj.conf
examples/lighting-app/nrfconnect/: README.md
examples/lock-app/nrfconnect/: CMakeLists.txt  README.md
examples/pump-app/nrfconnect/: README.md
examples/pump-controller-app/nrfconnect/: README.md
examples/weather_station/: CMakeLists.txt  Kconfig
examples/weather_station/configuration/thingy53_nrf5340_cpuapp/: overlay-factory_data_build.conf  overlay-rtt.conf  pm_static.yml  prj.conf  prj_release.conf
examples/weather_station/configuration/thingy53_nrf5340_cpuapp/child_image/: multiprotocol_rpmsg_release.conf
examples/weather_station/factory_data/: CD.der  DAC_cert.der  DAC_cert.pem  DAC_key.der  DAC_key.pem  PAI_cert.der  PAI_cert.pem  PAI_key.der  PAI_key.pem  factory_data.hex  factory_data.json
examples/weather_station/src/: app_task.cpp  app_task.h  chip_project_config.h  weather-station.matter  weather-station.zap
examples/weather_station/src/zap-generated/: endpoint_config.h
examples/window-app/nrfconnect/: README.md
scripts/: requirements.txt
scripts/tools/: generate_nrfconnect_chip_factory_data.py  nrfconnect_factory_data.schema  nrfconnect_generate_partition.py
scripts/tools/nrfconnect/: generate_nrfconnect_chip_factory_data.py  nrfconnect_factory_data.schema  nrfconnect_generate_partition.py
scripts/tools/temporary/: factory_data_template.json
scripts/tools/temporary/cbor_example/: CMakeLists.txt  main.cpp
src/app/: chip_data_model.cmake
src/app/util/: ember-compatibility-functions.cpp  util.cpp
src/app/zap-templates/: app-templates.json
src/crypto/: BUILD.gn  CHIPCryptoPALPSA.cpp  PSASessionKeystore.cpp
src/crypto/tests/: CHIPCryptoPALTest.cpp
src/include/platform/: CHIPDeviceConfig.h  ConnectivityManager.h  DeviceInstanceInfoProvider.h  ThreadStackManager.h
src/lib/address_resolve/: AddressResolve.h
src/lib/core/: CHIPConfig.h
src/platform/Linux/: ThreadStackManagerImpl.cpp  ThreadStackManagerImpl.h
src/platform/OpenThread/: GenericThreadStackManagerImpl_OpenThread.cpp  GenericThreadStackManagerImpl_OpenThread.h
src/platform/Tizen/: ThreadStackManagerImpl.cpp  ThreadStackManagerImpl.h
src/platform/Zephyr/: ConfigurationManagerImpl.cpp  ConfigurationManagerImpl.h  ThreadStackManagerImpl.cpp  ThreadStackManagerImpl.h
src/platform/nrfconnect/: BUILD.gn  CHIPDevicePlatformConfig.h  ConnectivityManagerImpl.cpp  ConnectivityManagerImpl.h  FactoryDataParser.c  FactoryDataParser.h  FactoryDataProvider.cpp  FactoryDataProvider.h  OTAImageProcessorImpl.cpp  OTAImageProcessorImpl.h
src/transport/: GroupPeerMessageCounter.cpp  GroupPeerMessageCounter.h  SessionManager.cpp
(+50 files in other folders)
